--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -1,3 +1,17 @@
+; CONFIG FILE
+; GitHub reporitory: https://github.com/mr-manuel/venus-os_dbus-mqtt-battery
+; remove semicolon ; to enable desired setting
+
+[DEFAULT]
+; Set logging level
+; ERROR = shows errors only
+; WARNING = shows ERROR and warnings
+; INFO = shows WARNING and running functions
+; DEBUG = shows INFO and data/values
+; default: WARNING
+logging = WARNING
+
+
 [BATTERY]
 ; lower voltage when warning alarm is triggered
 ; default: 3.0 * cell count
@@ -28,12 +42,16 @@ broker_address = IP_ADDR_OR_FQDN
 broker_port = 1883
 
 ; Enables TLS
+; 0 = Disabled
+; 1 = Enabled
 ;tls_enabled = 1
 
 ; Absolute path to the Certificate Authority certificate file that is to be treated as trusted by this client
 ;tls_path_to_ca = /data/keys/mosquitto.crt
 
 ; Disables verification of the server hostname in the server certificate
+; 0 = Disabled
+; 1 = Enabled
 ;tls_insecure = 1
 
 ; Username used for connection
