Fixes and new values * Added: Set logging level in `config.default.ini` * Added: A lot of new values that can be set, check `README.md` for details * Changed: Fixed topic name in `config.ini` * Changed: Logging levels of different messages for clearer output * Changed: Minimum required data to `power`, `voltage` and `soc` * Changed: Optimized log output for faster troubleshooting

--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -61,4 +61,5 @@ broker_port = 1883
 ;password = mypassword
 
 ; Topic where the meters data as JSON string is published
-topic = enphase/battery
+; minimum required JSON payload: { "dc": { "power": 321.6, "voltage": 52.6  }, "soc": 63 }
+topic_battery = enphase/battery
