--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -11,6 +11,13 @@
 ; default: WARNING
 logging = WARNING
 
+; Device name
+; default: MQTT Battery
+device_name = MQTT Battery
+
+; Device VRM instance
+; default: 41
+device_instance = 41
 
 [MQTT]
 ; IP addess or FQDN from MQTT server
@@ -42,4 +49,4 @@ broker_port = 1883
 
 ; Topic where the meters data as JSON string is published
 ; minimum required JSON payload: { "dc": { "power": 321.6, "voltage": 52.6  }, "soc": 63 }
-topic_battery = enphase/battery
+topic = enphase/battery
