corrected example in config.sample.ini

--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -48,5 +48,5 @@ broker_port = 1883
 ;password = mypassword
 
 ; Topic where the meters data as JSON string is published
-; minimum required JSON payload: { "dc": { "power": 321.6, "voltage": 52.6  }, "soc": 63 }
+; minimum required JSON payload: { "Dc": { "Power": 321.6, "Voltage": 52.6  }, "Soc": 63 }
 topic = enphase/battery
