--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -19,6 +19,11 @@ device_name = MQTT Battery
 ; default: 41
 device_instance = 41
 
+; Specify after how many seconds the driver should exit (disconnect), if no new MQTT message was received
+; default: 60
+; value to disable timeout: 0
+timeout = 60
+
 [MQTT]
 ; IP addess or FQDN from MQTT server
 broker_address = IP_ADDR_OR_FQDN
