Changed: Time-To-Go - It can now be configured in the config file - When charging the battery it's calculating the time to 100% SoC - When discharging it's calculating the time to the configured SoC

--- a/dbus-mqtt-battery/config.sample.ini
+++ b/dbus-mqtt-battery/config.sample.ini
@@ -24,6 +24,21 @@ device_instance = 41
 ; value to disable timeout: 0
 timeout = 60
 
+
+[TIME_TO_GO]
+; Calculates the Time-To-Go shown in the GUI
+; 0 = Disabled
+; 1 = Enabled
+enabled = 1
+; Specify the SoC which is used for calculation
+; default: 10
+soc = 10
+; Specify in seconds how often the Time-To-Go should be recalculated
+; Minimum are 5 seconds to prevent CPU overload
+; default: 300
+recalculate_every = 300
+
+
 [MQTT]
 ; IP addess or FQDN from MQTT server
 broker_address = IP_ADDR_OR_FQDN
